jira_clone/force-app/main/default/objects/TicketType__c/TicketType__c.object-meta.xml
<CustomObject>
    <description>Ticket types (Bug, Feature, Task, etc.)</description>
    <label>Ticket Type</label>
    <nameField>
        <label>Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>