jira_clone/force-app/main/default/objects/TicketType__c/fields/IconUrl__c.field-meta.xml
<CustomField>
    <fullName>IconUrl__c</fullName>
    <description>Download URL of the file linked to this ticket type via ContentDocumentLink. Derived server-side at read time (TicketService.applyLinkedIcons); not user-entered.</description>
    <label>Icon URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>