jira_clone/force-app/main/default/objects/TicketType__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Associated project</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>TicketTypes</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>