jira_clone/force-app/main/default/objects/TicketType__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <description>Associated workflow</description>
    <label>Workflow</label>
    <referenceTo>Workflow__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>TicketTypes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>

</CustomField>